gl31-master/src/test/deca/context/invalid/complet/int_return_float.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 12: Erreur, le type renvoyé n'est pas le bon
//
// Historique:
//    cree le 20/01/2021
class Test{

    int methTest(float param1){
        return param1;
    }
}
